--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.95.3",
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.0",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.563.0",
     "next": "14.2.35",
     "react": "^18",
